# DL_Demo

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
models/: house_price_model.pkl
notebooks/: InClass.ipynb  LRDemo.ipynb  MiniProject.ipynb  ch09_LR.ipynb
references/: demo.ipynb
