[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "DL_Demo"
version = "0.0.1"
description = "A demo"
authors = [
  { name = "Amy_Griffiths" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "==3.14.2"


[tool.ruff]
line-length = 99
src = ["DL_Demo"]
include = ["pyproject.toml", "DL_Demo/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["DL_Demo"]
force-sort-within-sections = true

